Update 1277. Count Square Sub.mdmatrices with All Ones.md

--- a/1277. Count Square Sub.mdmatrices with All Ones.md
+++ b/1277. Count Square Sub.mdmatrices with All Ones.md
@@ -4,7 +4,7 @@ That means if one position has value $n$, there will be a square, with all value
 
 Then we try to figure out the size of square can reach at $(i,j)$, it's determined by the value of itself, its above position, left position and left above position.
 
-```Pytho
+```Python
 class Solution():    
     def countSquares(self, A):
         for i in range(1, len(A)):
