Update 349. Intersection of Two Arrays.md

--- a/349. Intersection of Two Arrays.md
+++ b/349. Intersection of Two Arrays.md
@@ -26,9 +26,9 @@ class Solution:
                     cur2 = mid + 1
                     break
                 elif nums2[mid] < tar:
-                    start += 1
+                    start = mid + 1
                 else:
-                    end -= 1
+                    end = mid - 1
 
         return res
 ```
