Update and rename 1. Two Sum.java to 1. Two Sum.md

--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -1,3 +1,8 @@
+
+
+Use hash table.
+
+```java
 import java.util.Hashtable;
 
 class Solution {
@@ -16,3 +21,5 @@ class Solution {
         return null;
     }
 }
+```
+
