Change to Java. And use bfs, dfs, union find

--- a/200. Number of Islands.md
+++ b/200. Number of Islands.md
@@ -1,33 +1,166 @@
-Either dfs or bfs works. Mark all connected "1"s as something else.
+The first solution is DSF:
 
-```python
-from typing import List
-class Solution:
-    def numIslands(self, grid: List[List[str]]) -> int:
-        if not grid:
-            return 0
+```java
+class Solution {
+    public int numIslands(char[][] grid) {
 
-        self.grid = grid
-        self.m = len(grid)
-        self.n = len(grid[0])
-        res = 0
-        
-        for i in range(self.m):
-            for j in range(self.n):
-                if grid[i][j] == "1":
-                    res +=1
-                    self.dfs(i, j)
-        return res
+        if (grid == null) {
+            return 0;
+        }
 
-        
-    def dfs(self, i, j):
-        if i < 0 or i >= self.m or j < 0 or j >= self.n:
-            return
-        
-        if self.grid[i][j] == "1":
-            self.grid[i][j] = "#"
-            directions = [[-1,0],[1,0],[0,-1],[0,1]]
-            for d in directions:
-                self.dfs(i + d[0], j + d[1])
+        int res = 0;
+        for (int i = 0; i < grid.length; i++) {
+            for(int j = 0; j < grid[0].length; j++) {
+                if (grid[i][j] == '1') {
+                    res++;
+                    dfs(grid, i, j);
+                }
+            }
+        }
+
+        return res;
+    }
+
+    private void dfs(char[][] grid, int i, int j) {
+        grid[i][j] = '#';
+
+        int[][] diffs = {{-1,0},{1,0},{0,-1},{0,1}};
+
+        for (int[] diff : diffs) {
+            int x = i + diff[0];
+            int y = j + diff[1];
+
+            if(x<0 || x>=grid.length || y<0 || y>=grid[0].length) {
+                continue;
+            } else {
+                if (grid[x][y] == '1') {
+                    dfs(grid, x, y);
+                }
+            }
+        }
+    }
+}
+```
+
+
+
+Similarly, we can chanege it to BSF. But in Leetcode, but it exceeds memory limit.
+
+```java
+class Solution {
+
+    private int res = 0;
+    private int[][] diffs = {{-1,0},{1,0},{0,-1},{0,1}};
+    private LinkedList<Integer> queue = new LinkedList<>();
+
+    public int numIslands(char[][] grid) {
+
+        if (grid == null) {
+            return 0;
+        }
+
+        for (int i = 0; i < grid.length; i++) {
+            for(int j = 0; j < grid[0].length; j++) {
+                if (grid[i][j] == '1') {
+                    res++;
+                    bfs(grid, i, j);
+                }
+            }
+        }
+
+        return res;
+    }
+
+    private void bfs(char[][] grid, int i, int j) {
+        grid[i][j] = '#';
+
+        int n = grid[0].length;
+        for(int[] diff : diffs) {
+            int x = i + diff[0];
+            int y = j + diff[1];
+            if(x<0 || x>=grid.length || y<0 || y>=grid[0].length) {
+                continue;
+            } else if (grid[x][y] == '1') {
+                queue.addLast(x * n + y);
+            }
+        }
+
+        while(!queue.isEmpty()) {
+            int temp = queue.removeFirst();
+            bfs(grid, temp / n, temp % n);
+        }
+    }
+}
+```
+
+
+
+The last method is union find.
+
+**Remember, check the roots of two elements are not the same before unioning them. It's easy to forget.**
+
+Path compression and union by size are used in this example, they make time complexity to appeoximatley $O(n)$.
+
+```java
+class Solution {
+
+    private int[][] diffs = {{1,0},{0,1}};
+    int res = 0;
+    int[] father;
+
+    public int numIslands(char[][] grid) {
+
+        if (grid.length == 0) return res;
+
+        // initiate the father array
+        int m = grid.length;
+        int n = grid[0].length;
+        father = new int[m*n];
+        Arrays.fill(father, -1);
+
+        // union element
+        for(int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if(grid[i][j] == '1') {
+                    for(int[] diff : diffs) {
+                        int x = i + diff[0];
+                        int y = j + diff[1];
+                        if(x>=0 && x<m && y>=0 && y<n && grid[x][y]=='1') {
+                            if(find(i*n+j) != find(x*n+y)) union(find(i*n+j), find(x*n+y));
+                        }
+                    }
+                }
+            }
+        }
+
+        // count results
+        for(int i = 0; i < father.length; i++) {
+            if(father[i] < 0 && grid[i/n][i%n] == '1') res++;
+        }
+        return res;
+    }
+
+    private int find(int i) {
+        if(father[i] < 0) {
+            return i;
+        } else {
+            int root = find(father[i]);
+            father[i] = root;
+            return root;
+        }
+    }
+
+    void union(int rootX, int rootY) {
+        int newSize = father[rootX] + father[rootY];
+
+        if(father[rootX] < father[rootY]) {
+            father[rootY] = rootX;
+            father[rootX] = newSize;
+        } else {
+            father[rootX] = rootY;
+            father[rootY] = newSize;
+        }
+    }
+}
 ```
 
