--- a/2. Add Two Numbers.md
+++ b/2. Add Two Numbers.md
@@ -1,37 +1,28 @@
-I think it should be an easy one.
+Use dummy head node will simplfy this problem.
 
-```python
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
+```java
+class Solution {
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+        ListNode head = new ListNode(-1);
+        ListNode curNode = head;
+        int temVal = 0;
 
-class Solution:
-    def addTwoNumbers(self, l1: ListNode, l2: ListNode) -> ListNode:
-        index = 1; num = 0
-        while l1 or l2:
-            if not l1:
-                num += l2.val * index
-                l2 = l2.next
-            elif not l2:
-                num += l1.val * index
-                l1 = l1.next
-            else:
-                num += (l1.val + l2.val) * index
-                l1 = l1.next
-                l2 = l2.next
-            index *= 10
-        
-        res = ListNode(); cur = res
-        while num:
-            curValue = num % 10
-            cur.val = curValue
-            num = num // 10
-            if num:
-                cur.next = ListNode()
-                cur = cur.next
-        
-        return res
+        while(l1!=null || l2!=null || temVal>0) {
+            int val1 = 0; int val2 = 0;
+            if(l1!=null) val1 = l1.val;
+            if(l2!=null) val2 = l2.val;
+            temVal += (val1 + val2);
+
+            int curPosition = temVal % 10;
+            curNode.next = new ListNode(curPosition);
+
+            temVal = (temVal - curPosition) / 10;
+            curNode = curNode.next;
+            if(l1!=null) l1 = l1.next;
+            if(l2!=null) l2 = l2.next;
+        }
+        return head.next;
+    }
+}
 ```
 
