add Java solution

--- a/146. LRU Cache.md
+++ b/146. LRU Cache.md
@@ -67,3 +67,92 @@ class LRUCache:
         self.size -= 1
 ```
 
+
+
+Java solution
+
+```java
+import java.util.Hashtable;
+
+class LRUCache {
+
+    class Node {
+        public int key;
+        public int val;
+        public Node pre;
+        public Node next;
+        public Node(int key, int val) {
+            this.key = key;
+            this.val = val;
+            pre = null;
+            next = null;
+        }
+    }
+
+    // dummy node
+    private Node head;
+    private Node tail;
+
+    private Hashtable<Integer, Node> table;
+    private int count;
+    private final int capacity;
+
+    public LRUCache(int capacity) {
+        head = new Node(-1, -1);
+        tail = new Node(-1, -1);
+        head.next = tail;
+        tail.pre = head;
+        count = 0;
+        this.capacity = capacity;
+        table = new Hashtable<>();
+    }
+
+    public int get(int key) {
+        Node target = table.get(key);
+        if(target == null) {
+            return -1;
+        } else {
+            toHead(target);
+            return target.val;
+        }
+    }
+
+    public void put(int key, int value) {
+        Node target;
+        if(table.get(key) == null) {
+            target = new Node(key, value);
+            addNode(target);
+            table.put(key, target);
+        } else {
+            target = table.get(key);
+            toHead(target);
+            target.val = value;
+        }
+    }
+
+    private void toHead(Node node) {
+        node.pre.next = node.next;
+        node.next.pre = node.pre;
+
+        node.next = head.next;
+        node.pre = head;
+        node.next.pre = node;
+        head.next = node;
+    }
+
+    private void addNode(Node node) {
+        if(count == capacity) {
+            table.remove(tail.pre.key);
+            tail.pre = tail.pre.pre;
+            tail.pre.next = tail;
+        } else {
+            count++;
+        }
+        node.next = head.next;
+        node.pre = head;
+        node.next.pre = node;
+        head.next = node;
+    }
+}
+```
+
