--- a/206. Reverse Linked List.md
+++ b/206. Reverse Linked List.md
@@ -1,9 +1,22 @@
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
+```java
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        if(head == null) return head;
 
+        ListNode res = new ListNode(head.val);
+        ListNode curNode = head.next;
+        
+        while(curNode != null) {
+            res = new ListNode(curNode.val, res);
+            curNode = curNode.next;
+        }
+        
+        return res;
+    }
+}
+```
+
+```python
 class Solution:
     def reverseList(self, head):
         if not head:
@@ -19,3 +32,4 @@ class Solution:
                 cur_res.next = ListNode(i)
                 cur_res = cur_res.next
             return res.next
+```
